fix code review findings -Width of the pulldown in macro -hide the pulldown of pages when the value of remote-pulldown is invalid -add the current remote on pulldown -style of page-jump settings

--- a/app/stylesheets/_full-custom.scss
+++ b/app/stylesheets/_full-custom.scss
@@ -397,16 +397,23 @@
             //ジャンプボタンのpreviewとアクション設定pulldownとの間のマージン
             margin-top:$SIZE_PROPERTY_AREA_JUMP_ACTION_CONTAINER_MARGIN_TOP;
 
+            &.button-jump-label-dest-container{
+                height: $SIZE_PROPERTY_AREA_JUMP_DEST_CONTAINER_HEIGHT;
+            }
+
             #button-state-label-dest{
                 display: inline;
+                vertical-align: middle;
             }
 
             #button-change-jump-dest{
                 display: inline;
+                vertical-align: middle;
                 margin-left: $SIZE_PROPERTY_AREA_JUMP_CHANGE_DEST_BUTTON_MARGIN_LEFT;
                 cursor: pointer;
                 color: $COLOR_PROPERTY_AREA_JUMP_CHANGE_DEST_BUTTON_COLOR;
                 text-decoration: underline;
+                font-size: $FONT_SIZE_PROPERTY_BUTTON_CHANGE_JUMP_DEST;
             }
         }
 
@@ -430,6 +437,17 @@
                     margin-left : $SIZE_PROPATY_AREA_SIGNAL_CONTAINER_BORDER_MARGIN_LEFT;
                     width:$SIZE_PROPATY_AREA_MACRO_SIGNAL_CONTAINER_BORDER_WIDTH;
                 }
+            }
+        }
+        
+        .jump-container{
+             #signal-remote-container .custom-select{
+                margin: 0;
+                width: 100%;
+            }
+            #signal-page-container .custom-select{
+                margin: 0;
+                width: 100%;
             }
         }
 
@@ -459,14 +477,6 @@
                     margin-left : $SIZE_PROPATY_AREA_MACRO_PULL_DOWM_MARGIN_LEFT;
                     margin-right:$SIZE_PROPATY_AREA_MACRO_PULL_DOWM_MARGIN_RIGHT;
                     width:$SIZE_PROPATY_ARAE_MACRO_PULL_DOWN_WIDTH;   
-                }
-                #signal-remote-container .custom-select{
-                    margin: 0;
-                    width: 100%;
-                }
-                #signal-page-container .custom-select{
-                    margin: 0;
-                    width: 100%;
                 }
 
                 .order-indicator-container{
